--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pomodoro-website",
+  "name": "pomodoro-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,12 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "@headlessui/react": "^1.6.1",
+    "@heroicons/react": "^1.0.6",
+    "classnames": "^2.3.1",
+    "next": "12.1.5",
+    "next-compose": "^0.0.2",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-dropdown": "^1.10.0",
+    "react-test-renderer": "18.0.0",
+    "use-sound": "^4.0.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6"
+    "autoprefixer": "^10.4.5",
+    "eslint": "8.14.0",
+    "eslint-config-next": "12.1.5",
+    "file-loader": "^6.2.0",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.24",
+    "url-loader": "^4.1.1"
   }
 }
